<resources>
    <string name="app_name">Draw Cartoon: AR Drawing</string>

    <string name="splash_title">Draw Cartoon: AR\nDrawing</string>
    <string name="splash_hint_bottom">This action can contain ads</string>
    <string name="intro_hint">intro</string>
    <string name="intro_1_title">Pencil Sketch Any Picture</string>
    <string name="intro_2_title">Make Drawing Video</string>
    <string name="intro_3_title">Various Templates</string>
    <string name="btn_next">Next</string>
    <string name="btn_continue">Continue</string>
    <string name="permission_des">Allow Draw Cartoon: AR Drawing to access\nphotos, media and files on your device</string>
    <string name="permission_des_bold">Draw Cartoon: AR Drawing</string>
    <string name="media_title">Media</string>
    <string name="permission_title">Permission</string>
    <string name="trending_title">Trendings</string>
    <string name="draw_cartoon_title">Draw Cartoon</string>
    <string name="setting_title">Settings</string>
    <string name="create_tv">Create</string>
    <string name="category_tv">Category</string>
    <string name="my_work_tv">My Work</string>

    <string name="language_title">Language</string>
    <string name="rate_title">Rate Us</string>
    <string name="share_app_title">Share App</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="rate_btn_title">Rate</string>
    <string name="exit_title">Exit</string>
    <string name="from_camera_title">From Camera</string>
    <string name="from_gallery_title">From Gallery</string>

    <string name="no_star_title">Do you like the app?</string>
    <string name="one_to_three_star_title">Oh, no!</string>
    <string name="four_five_start_title">We love you too!</string>

    <string name="no_star_des">Let us know your experience</string>
    <string name="one_to_three_star_des">Please give us some feedback</string>
    <string name="four_five_start_des">Thanks for your feedback</string>

    <string name="create_draw_title">Create Draw</string>
    <string name="camera_title">Camera</string>
    <string name="photo_title">Photo</string>
    <string name="video_title">Video</string>
    <string name="no_photos_yet">No photos yet</string>
    <string name="no_videos_yet">No videos yet</string>
    <string name="download_title">Download</string>
    <string name="share_title">Share</string>

    <string name="delete_title">Delete</string>
    <string name="delete_description">Do you want to delete this item?</string>
    <string name="success_delete">Deleted successfully</string>
    <string name="instruction_title">Instruction</string>
    <string name="ok_title">ok</string>

    <string name="start_time">00:00</string>

    <string name="download_success">Saved to gallery successfully</string>
    <string name="download_failed">Failed to save to gallery</string>
    <string name="share_failed">Unable to share this file</string>

    <string name="media_permission_error_message">Media permission denied</string>
    <string name="camera_permission_error_message">Camera permission denied</string>
    <string name="camera_permission_success_message">Camera permission accepted</string>
    <string name="no_internet_connected_message">You are offline. Please turn on Wi-Fi or mobile data to continue</string>
    <string name="internet_connected_message">Internet connected</string>
    <string name="create_image_fail_message">Could not create image file</string>
    <string name="no_title">No</string>

    <string name="no_internet_title">No internet connection</string>
    <string name="open_settings_title">Open settings</string>
    <string name="close_title">Close</string>
    <string name="unable_load_image_title">Unable to load image</string>
    <string name="unable_load_image_message">Please turn on Wi-Fi or mobile data to load the images</string>

    <string name="saved_photo_title">Photo saved!</string>
    <string name="saved_video_title">Video saved!</string>
    <string name="saved_photo_des">Your photo has been successfully saved to My work. View it now</string>
    <string name="saved_video_des">Your video has been successfully saved to My work. View it now</string>

    <string name="view_title">View</string>
    <string name="play_media_error_message">Unable to play this media %1$s</string>

    <string name="permission_settings_title">Permission Settings</string>
    <string name="permission_settings_des">The app needs this permission. Please enable permissions in Settings</string>
    <string name="cancel_title">Cancel</string>

    <string name="please_select_stars_des">Please select number of stars</string>
    <string name="no_item_selected_to_delete_des">Select at least one item to delete</string>
    <string name="no_item_selected_to_download_des">Select at least one item to download</string>
    <string name="no_item_selected_to_share_des">Select at least one item to share</string>

    <string name="yes_title">Yes</string>
    <string name="camera_permission_settings_des">The app needs camera permission before performing the next action</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="please_enable_permissions_in_settings">Please enable permissions in Settings</string>
</resources>