<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    tools:context=".presentation.permission.PermissionActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/UTM_Azuki_26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/permission_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_pen"
        android:layout_width="164dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_pen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_permission_des"
        style="@style/inter_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/permission_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pen" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permission_switch_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_language_unselected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_permission_des">

        <TextView
            android:id="@+id/tv_media"
            style="@style/inter_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:layout_marginStart="16dp"
            android:text="@string/media_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:focusable="false"
            android:thumb="@drawable/custom_thumb"
            android:thumbTint="@null"
            android:trackTint="@null"
            app:layout_constraintBottom_toBottomOf="@id/tv_media"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_media"
            app:switchMinWidth="56dp"
            app:thumbTint="@null"
            app:track="@drawable/custom_track"
            app:trackTint="@null" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_permission_switch_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_language_unselected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permission_switch_container">

        <TextView
            android:id="@+id/tv_camera"
            style="@style/inter_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:layout_marginStart="16dp"
            android:text="@string/camera_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/camera_switch_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:focusable="false"
            android:thumb="@drawable/custom_thumb"
            android:thumbTint="@null"
            android:trackTint="@null"
            app:layout_constraintBottom_toBottomOf="@id/tv_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_camera"
            app:switchMinWidth="56dp"
            app:thumbTint="@null"
            app:track="@drawable/custom_track"
            app:trackTint="@null" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn_continue"
        style="@style/roboto_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>