<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:minWidth="162dp"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/iv_download"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:padding="2dp"
        android:src="@drawable/ic_gradient_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_download"
        style="@style/roboto_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/download_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_download"
        app:layout_constraintStart_toEndOf="@id/iv_download"
        app:layout_constraintTop_toTopOf="@id/iv_download" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/md_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:alpha="0.3"
        app:dividerColor="@color/charcoal_cray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_download" />

    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:padding="2dp"
        android:src="@drawable/ic_gradient_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/md_1" />

    <TextView
        android:id="@+id/tv_share"
        style="@style/roboto_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/share_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_share"
        app:layout_constraintStart_toEndOf="@id/iv_share"
        app:layout_constraintTop_toTopOf="@id/iv_share" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/md_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:alpha="0.3"
        app:dividerColor="@color/charcoal_cray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_share" />

    <ImageView
        android:id="@+id/ic_delete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:padding="2dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/md_2" />

    <TextView
        android:id="@+id/tv_delete"
        style="@style/roboto_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/delete_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ic_delete"
        app:layout_constraintStart_toEndOf="@id/ic_delete"
        app:layout_constraintTop_toTopOf="@id/ic_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>