<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    tools:context=".presentation.detail.DetailWorkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/UTM_Azuki_26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_work_tv"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circle_recycle_bin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controller_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="46dp"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="@id/btn_play"
            app:layout_constraintEnd_toStartOf="@id/btn_play"
            app:layout_constraintTop_toTopOf="@id/btn_play" />

        <ImageView
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gradient_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/btn_play"
            app:layout_constraintStart_toEndOf="@id/btn_play"
            app:layout_constraintTop_toTopOf="@id/btn_play" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/controller_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <SeekBar
            android:id="@+id/sb_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="3dp"
            android:minHeight="2dp"
            android:progress="0"
            android:progressDrawable="@drawable/custom_seekbar_bg"
            android:thumb="@drawable/custom_seekbar_thumb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_counter_time"
            style="@style/roboto_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_time"
            android:textColor="@color/category_unselected"
            app:layout_constraintStart_toStartOf="@id/sb_video"
            app:layout_constraintTop_toBottomOf="@id/sb_video" />

        <TextView
            android:id="@+id/tv_total_time"
            style="@style/roboto_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:text="@string/start_time"
            android:textColor="@color/category_unselected"
            app:layout_constraintEnd_toEndOf="@id/sb_video"
            app:layout_constraintTop_toBottomOf="@id/sb_video" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.media3.ui.PlayerView
        android:id="@+id/pv_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@id/progress_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_container" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/photo_work_test"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btn_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/white_stroke_with_gradient_bg"
            android:gravity="center"
            android:minHeight="44dp"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_download" />

            <TextView
                style="@style/roboto_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/download_title"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_stroke_with_gradient_bg"
            android:gravity="center"
            android:minHeight="44dp"
            android:orientation="horizontal"
            android:paddingTop="13dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />

            <TextView
                style="@style/roboto_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/share_title"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>